tests/negative/regression/r3.orng
let const b: while let a: {break} = case | true; true { } = 0